automation of all tests and recording results

--- a/dopetest_xamarin/MainPage.xaml
+++ b/dopetest_xamarin/MainPage.xaml
@@ -43,6 +43,9 @@
         <!--<Button x:Name="startMT"
             Text="@ MT" BackgroundColor="Blue"
             Clicked="startMT_Clicked"/>-->
+        <Button x:Name="startAll"
+            Text="All" BackgroundColor="Green"
+            Clicked="startAll_Clicked"/>
         <Button x:Name="startST"
             Text="@ Build" BackgroundColor="Blue"
             Clicked="startST_Clicked"/>
